--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pdfme/common": "^4.3.2",
+    "@pdfme/generator": "^4.3.2",
+    "@pdfme/ui": "^4.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
